<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="image_context">image</string>
    <string name="app_name">Challenger</string>
    <string name="start_select_user">Select User</string>
    <string name="select_challenge">Select Challenge</string>
    <string name="select_category">Select Category</string>
    <string name="action_settings">Settings</string>
    
      <string name="text_accepted">ACCEPTED</string>
    <string name="text_received">RECEIVED</string>

    <string name="tab_lbl_my_challenges">My Challenges</string>
    <string name="tab_lbl_scoreboard">Scoreboard</string>
    <string name="tab_lbl_create_challenge">Challenge</string>
    <string name="tab_lbl_welcome">Welcome</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    
  
    
    <string name="btn_complete">Complete</string>
    <string name="no_challTitle">No Challenge Yet</string>
    <string name="no_challDesc">No Challenge has been issued</string>
    <string name="btnChallenge">SEND CHALLENGE!</string>
    <string name="btnBack">Back</string>
    <string name="btn_add_user">Add User</string>
    
    <string name="challenge_title">CHALLENGE</string>
    <string name="challenge_points">POINTS</string>
    
      <string name="user_points">Score</string>
  		<string name="user_name">Name</string>
  		
  		<string name="fill_form">Enter details below and click complete to add a user</string>
  		<string name="add_name">User Name</string>
  		
  		
  		<string name="welcome_start">Welcome</string>
  		<string name="welcome_from_start">Navigate through tabs to challenges!</string>
  		
  		<string name="welcome_response">Response Logged!</string>
  		<string name="welcome_from_response">Your response has been added!</string>
  		
  		  		<string name="welcome_complete">Challenge Complete</string>
  		<string name="welcome_from_complete">You go girl!</string>
  		
  		  		<string name="welcome_sent">Challenge Sent</string>
  		<string name="welcome_from_sent">Oooooooooooh!</string>
</resources>
