<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Start"
    android:id="@+id/startView"
    >

        <ImageView
        android:contentDescription="@string/image_context"
        android:id="@+id/catIm"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
         />
     
 
        
    <TextView
        android:id="@+id/chall_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/catIm"
        
        android:gravity="center"
         android:padding="20dp"
        />
    <TextView
        android:id="@+id/chall_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/catIm"
        android:gravity="center_horizontal"
         android:padding="20dp"
        />
    <TextView
        android:id="@+id/points_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_points"
        android:layout_below="@id/chall_desc"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />
        <TextView
        android:id="@+id/points_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_challTitle"
        android:layout_below="@id/points_title"
        android:gravity="center_horizontal"
        android:padding="20dp"
        />
    

        <LinearLayout
            android:id="@+id/my_button_view"
                    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

<Button   android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChallenge"
        android:text="@string/btnChallenge"
    	android:layout_weight="1"
    	android:gravity="center"
   
    />
<Button   android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBack"
        android:text="@string/btnBack"
        android:layout_weight="1"
   		android:gravity="center"
    />
</LinearLayout>
</RelativeLayout>
